1.4.3:
- Our app is now translatable: Visit us on GitHub for more info
- Added German language
- Bug fixes and improvements

1.4.2:
- Fix jump to top on sync in shopping mode
- New OPEN icon
- Improved navigation
- Debugging tools in settings
- Bug fixes and improvements

1.4.1:
- Camera crash fixed
- In-app help with initial FAQ
- Setting for changing update interval in shopping mode
- Bug fixes and improvements

1.4.0:
- Full shopping list support with offline mode
- In-store shopping mode with big UI elements
- Disabled features with Grocy config
- Improved screen rotation support
- Switching between consume, open and purchase in scan mode
- Over 340 improvements and bug fixes

1.3.0:
- Open Food Facts integration
- Editable bottom notes of shopping lists
- Dense stock overview in landscape mode
- Proper purchase to stock amount calculation
- Bug fixes and improvements

1.2.0:
- Create and edit shopping list entries
- Add stock items to shopping list
- Indicate "on shopping list" in stock overview
- Edit product description
- Grocy version incompatibility information
- HTTP support
- Bug fixes and improvements

1.1.0:
- Switch between scan modes
- Price history
- Scanning with haptic feedback
- Clear shopping lists
- Auto fill login with recent credentials
- Proper color contrasts
- Bug fixes and improvements